force-app/main/default/objects/Recycle_Bin_Setting__c/Recycle_Bin_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>store all the setting to Recycle Bin Setting</description>
    <label>Recycle Bin Setting</label>
</CustomObject>