force-app/main/default/objects/Recycle_Bin_Setting__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <label>End</label>
    <length>255</length>
    <type>Text</type>
</CustomField>