force-app/main/default/objects/Recycle_Bin_Setting__c/fields/isDaily__c.field-meta.xml
<CustomField>
    <fullName>isDaily__c</fullName>
    <defaultValue>true</defaultValue>
    <label>isDaily</label>
    <type>Checkbox</type>
</CustomField>