force-app/main/default/objects/Recycle_Bin_Setting__c/fields/IsRemoteSiteAdded__c.field-meta.xml
<CustomField>
    <fullName>IsRemoteSiteAdded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRemoteSiteAdded</label>
    <type>Checkbox</type>
</CustomField>