force-app/main/default/objects/Recycle_Bin_Setting__c/fields/isWeekly__c.field-meta.xml
<CustomField>
    <fullName>isWeekly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isWeekly</label>
    <type>Checkbox</type>
</CustomField>