force-app/main/default/objects/Recycle_Bin_Setting__c/fields/Last_batch_run__c.field-meta.xml
<CustomField>
    <fullName>Last_batch_run__c</fullName>
    <defaultValue>today() - 1</defaultValue>
    <label>Last batch run</label>
    <type>Date</type>
</CustomField>