force-app/main/default/objects/Recycle_Bin_Setting__c/fields/Preferred_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Start_Time__c</fullName>
    <label>Preferred Start Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>