force-app/main/default/objects/Recycle_Bin_Setting__c/fields/Real_time_object_tracking__c.field-meta.xml
<CustomField>
    <fullName>Real_time_object_tracking__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>You will receive real time mail when any user delete records from tracked object.</inlineHelpText>
    <label>Real time object tracking</label>
    <type>Checkbox</type>
</CustomField>