force-app/main/default/objects/Recycle_Bin_Setting__c/fields/Record_Limits__c.field-meta.xml
<CustomField>
    <fullName>Record_Limits__c</fullName>
    <defaultValue>2500</defaultValue>
    <inlineHelpText>Total number of records display on Recycle Bin Page</inlineHelpText>
    <label>Record Limits</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>