force-app/main/default/objects/Recycle_Bin_Setting__c/fields/Schedule_object_tracking__c.field-meta.xml
<CustomField>
    <fullName>Schedule_object_tracking__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>You should to schedule batch so at that time you got mail of deleted records.</inlineHelpText>
    <label>Schedule object tracking</label>
    <type>Checkbox</type>
</CustomField>