force-app/main/default/objects/Recycle_Bin_Setting__c/fields/Search_Inactive_Users_in_Deleted_By__c.field-meta.xml
<CustomField>
    <fullName>Search_Inactive_Users_in_Deleted_By__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Search Inactive Users in Deleted By (On/Off)</inlineHelpText>
    <label>Search Inactive Users in Deleted By</label>
    <type>Checkbox</type>
</CustomField>