force-app/main/default/objects/Recycle_Bin_Setting__c/fields/SelectedWeek__c.field-meta.xml
<CustomField>
    <fullName>SelectedWeek__c</fullName>
    <label>SelectedWeek</label>
    <length>10</length>
    <type>Text</type>
</CustomField>