force-app/main/default/objects/Recycle_Bin_Setting__c/fields/Send_record_deletion_email_to__c.field-meta.xml
<CustomField>
    <fullName>Send_record_deletion_email_to__c</fullName>
    <label>Send record deletion email to</label>
    <type>TextArea</type>
</CustomField>