force-app/main/default/objects/Recycle_Bin_Setting__c/fields/Show_Default_Entries__c.field-meta.xml
<CustomField>
    <fullName>Show_Default_Entries__c</fullName>
    <defaultValue>10</defaultValue>
    <inlineHelpText>Show default entry on Recycle Bin Page</inlineHelpText>
    <label>Show Default Entries</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>